@@ -10,7 +10,8 @@ Curl and libcurl 7.14.1
  Number of contributors:                   437
 
 This release includes the following changes:
- 
+
+ o trailer support for chunked encoded data streams 
  o -x/CURL_PROXY strings may now contain user+password
  o --trace-time now outputs the full microsecond, all 6 digits
 
@@ -41,6 +42,7 @@ This release would not have looked like this without help, code, reports and
 advice from friends like these:
 
  John McGowan, Georg Wicherski, Andres Garcia, Eric Cooper, Todd Kulesza,
- Tupone Alfredo, Gisle Vanem, David Shaw, Andrew Bushnell, Dan Fandrich
+ Tupone Alfredo, Gisle Vanem, David Shaw, Andrew Bushnell, Dan Fandrich,
+ Adrian Schuur
 
         Thanks! (and sorry if I forgot to mention someone)
